# iiqe

./: .gitignore  README.md  pyproject.toml
documents/: i like to cook things.md
src/ego_search/: chunk.py  extract.py  main.py  prompt.py  reflective.py  settings.py
