[project]
name = "ego-search"
version = "0.1.0"
description = "Embedding Group Overlap Search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.31",
    "dspy>=3.0.3",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyqt6>=6.9.1",
    "scipy>=1.16.2",
]

[project.scripts]
prompt = "ego_search:main.cli_prompt"
ingest = "ego_search:main.cli_ingest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
